2018-11-20 Gregory L. Lee <lee218@llnl.gov>
	* : Added dyninst 10.0 support

2018-10-17 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py : Handle .dot file lines longer than 16K

2018-09-28 Gregory L. Lee <lee218@llnl.gov>
	* : Python 3 and xdot 0.9 support added

2018-08-07 Gregory L. Lee <lee218@llnl.gov>
	* : Fixed core file merging

2018-05-15 Gregory L. Lee <lee218@llnl.gov>
	* STATview.py : use lru_cache for translating edge labels

2018-05-01 Gregory L. Lee <lee218@llnl.gov>
	* : tag version 4.0

2018-04-16 Gregory L. Lee <lee218@llnl.gov>
	* : Added coverage tests

2018-04-04 Gregory L. Lee <lee218@llnl.gov>
	* : Fix TV launch

2018-02-02 Gregory L. Lee <lee218@llnl.gov>
	* : Allow specification of max threads per daemon

2018-01-16 Gregory L. Lee <lee218@llnl.gov>
	* : Require Graphlib 3.0 or greater
	* : Require MRNet 4.0 or greater

2018-01-09 Gregory L. Lee <lee218@llnl.gov>
	* : added license info to new .py files

2017-12-11 Gregory L. Lee <lee218@llnl.gov>
	* STATGUI.py: fixed remote host shell toggle in GUI
	* : fixed parsing of function name for gdb BE

2017-12-07 Gregory L. Lee <lee218@llnl.gov>
	* STATGUI.py: fixed arg passing to TotalView

2017-10-17 Gregory L. Lee <lee218@llnl.gov>
	* : pass PYTHONPATH and STAT_GDB to BE as args

2017-10-16 Gregory L. Lee <lee218@llnl.gov>
	* doc/src/* : documentation updates for GDB and CUDA debugging

2017-10-03 Gregory L. Lee <lee218@llnl.gov>
	* : allow use of vanilla gdb in addition to cuda-gdb
	* : better error checking of gdb module functions
	* : enable retry for cuda traces when not in cuda kernel
	* STAT_BackEnd.C : don't clear nodIdToAttrs_ in clear2dNodes and Edges (broke 3D traces)
	* : enable quick cuda traces (from "info cuda threads")

2017-09-19 Gregory L. Lee <lee218@llnl.gov>
	* STAT_BackEnd.C : improved python function arg creation

2017-09-15 Gregory L. Lee <lee218@llnl.gov>
	* : added cuda-gdb backend implementation

2017-08-15 Gregory L. Lee <lee218@llnl.gov>
	* : added callpath wrapper